--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   "dependencies": {
     "@slack/bolt": "^3.3.0",
     "@truffle/contract": "^4.3.14",
-    "@truffle/hdwallet-provider": "^1.3.0",
     "bip39": "^3.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
+    "truffle-hdwallet-provider": "^1.0.1",
     "web3": "^1.3.5"
   }
 }
