--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bip39": "^3.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "heroku": "^7.52.0",
     "nodemon": "^2.0.7",
     "truffle-hdwallet-provider": "^1.0.1",
     "web3": "^1.3.5"
