--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "truffle-hdwallet-provider": "^1.0.1",
-    "web3": "^1.3.5"
+    "web3": "^1.3.5",
+    "web3-eth-contract": "^1.3.5"
   }
 }
