--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
+    "request-promise": "^4.2.6",
     "truffle-hdwallet-provider": "^1.0.1",
     "web3": "^1.3.5"
   }
